public/css/bazinga-home.css
.baz-content-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

footer {
    margin-top: auto;
}

a,
img {
    text-decoration: none;
    color: inherit;
    border: none;
    outline: none;
}

.baz-profile-img {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 50%;
    margin-right: 0.5rem;
}

.container-fluid.home::before {
    content: '';
    background-image: url(/images/home/baner-dec-right.png);
    background-repeat: no-repeat;
    position: absolute;
    right: 0;
    top: 0px;
    width: 98px;
    height: 290px;
}

.container-fluid.home::after {
    content: '';
    background-image: url(/images/home/baner-dec-left.png);
    background-repeat: no-repeat;
    position: absolute;
    left: 0;
    top: 0px;
    width: 193px;
    height: 467px;
}

.navbar {
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
}

.baz-home-header {
    background-image: url(/images/home/baz-home-header.jpg);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    min-height: 400px;
    background-clip: content-box;
    /* https://stackoverflow.com/a/40743802 && https://stackoverflow.com/a/34251586 */
}

.baz-about {
    background-image: url(/images/home/about-bg.png);
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    padding: 200px 0px 120px 0px;
    /* margin-top: 120px; */
}

.mt-120 {
    margin-top: 120px;
}

.mb-120 {
    margin-bottom: 120px;
}

/* https://stackoverflow.com/a/19049457 */
.baz-ellipsis {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
}

/* NOTIF */
.baz-notif {
    position: fixed;
    right: 16px;
    top: 16px;
    z-index: 10000;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

/* ANIMATION */
.baz-card-anim {
    overflow: hidden;
}

.baz-card-anim>img {
    /* object-fit: cover;
    width: 100%;
    height: 100%; */
    transition: transform 0.3s ease-in-out;
}

.baz-card-anim-container:hover img {
    transform: scale(1.45);
}

/* SEARCH */
.ge-select select {
    font-family: inherit;
    font-size: 1rem;
    display: block;
    width: 100%;
    height: 2.375rem;
    /* padding: 6px 12px; */
    border: none;
    border-bottom: 2px solid #e8e8e8;
    background-color: inherit;
    color: inherit;
    outline: none;
    line-height: normal;
    cursor: pointer;
    -webkit-appearance: none;
}

.ge-select {
    position: relative;
    display: block;
    width: 100%;
    max-width: 100%;
    padding: 0;
    border-width: 0;
    cursor: pointer;
    margin-top: 20px;
}

.ge-select img {
    position: absolute;
    top: 50%;
    right: 0;
    width: 20px;
    height: auto;
    margin-top: -7px;
    pointer-events: none;
}

.price-range {
    margin-top: 24px;
}

.prices {
    display: flex;
    justify-content: space-between;
    font-size: 12px;
}

.slider {
    position: relative;
    height: 1px;
    margin: 18px 0;
}

.slider>div {
    position: absolute;
    left: 10px;
    right: 2px;
    height: 1px;
}

.slider>div>.inverse-left {
    width: 70%;
    position: absolute;
    left: 0;
    height: 1px;
    border-radius: 10px;
    background-color: #ccc;
    margin: 0 7px;
}

.slider>div>.inverse-right {
    width: 70%;
    position: absolute;
    right: 0;
    height: 1px;
    border-radius: 10px;
    background-color: #ccc;
    margin: 0 7px;
}

.slider>div>.range {
    left: 0%;
    right: 0%;
    position: absolute;
    left: 0;
    height: 1px;
    border-radius: 14px;
    background-color: #e8e8e8;
}

.slider>div>.thumb {
    position: absolute;
    top: -7px;
    z-index: 2;
    height: 14px;
    width: 14px;
    text-align: left;
    margin-left: -11px;
    cursor: pointer;
    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.4);
    background-color: #fff;
    border-radius: 50%;
    outline: none;
    border: 2px solid black;
}

.thumb.first {
    left: 0%;
}

.thumb.second {
    left: 100%;
}

.slider>input[type="range"] {
    position: absolute;
    pointer-events: none;
    -webkit-appearance: none;
    z-index: 3;
    height: 14px;
    top: -2px;
    width: 100%;
    opacity: 0;
}

div.slider>input[type="range"]:focus::-webkit-slider-runnable-track {
    background: transparent;
    border: transparent;
}

div.slider>input[type="range"]:focus {
    outline: none;
}

div.slider>input[type="range"]::-webkit-slider-thumb {
    pointer-events: all;
    width: 28px;
    height: 28px;
    border-radius: 0px;
    border: 0 none;
    background: red;
    -webkit-appearance: none;
}

div.slider>input[type="range"]::-ms-fill-lower {
    background: transparent;
    border: 0 none;
}

div.slider>input[type="range"]::-ms-fill-upper {
    background: transparent;
    border: 0 none;
}

div.slider>input[type="range"]::-ms-tooltip {
    display: none;
}

.slider>div>.sign {
    opacity: 0;
    position: absolute;
    margin-left: -11px;
    top: -39px;
    z-index: 3;
    background-color: #d02128;
    color: #fff;
    width: 28px;
    height: 28px;
    border-radius: 28px;
    -webkit-border-radius: 28px;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
    text-align: center;
}

.sign {
    display: none;
}

.sign.first {
    left: 0%;
}

.sign.second {
    left: 100%;
}

.slider>div>.sign:after {
    position: absolute;
    content: "";
    left: 0;
    border-radius: 16px;
    top: 19px;
    border-left: 14px solid transparent;
    border-right: 14px solid transparent;
    border-top-width: 16px;
    border-top-style: solid;
    border-top-color: #d02128;
}

.slider>div>.sign>span {
    font-size: 12px;
    font-weight: 700;
    line-height: 28px;
}

.slider:hover>div>.sign {
    opacity: 1;
}

.profile-picture {
    flex: 1 1 30%;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 8px;
}

.profile-info {
    flex: 1 1 70%;
}

@media screen and (max-width: 600px) {

    .container-fluid.home::before,
    .container-fluid.home::after {
        display: none;
    }

    .baz-about {
        position: relative;
        background-image: none;
        padding: 0px;
    }

    .baz-about .about-person {
        margin-top: calc(-120px + 1.5rem);
    }

    .baz-about .about-content {
        z-index: 1;
        background: #fff;
    }

    .baz-about .item {
        background: linear-gradient(105deg, rgba(255, 77, 30, 1) 0%, rgba(255, 44, 109, 1) 100%);
        padding: 1rem;
        border-radius: 1rem;
        display: inline-block;
    }

    /* NOTIF */
    .baz-notif {
        right: 0;
        top: 0;
        max-width: 100%;
    }

    .profile-picture {
        height: 250px;
    }
}


/*-----------------------
Show Product
------------------------*/
.baz-card {
    max-width: 600px;
}
.go-back {
    display: flex;
    align-items: center;
    color: black;
    cursor: pointer;
}

.go-back>svg {
    width: 0.8rem;
    height: 0.8rem;
    margin-right: 0.5rem;
}

.product-share {
    display: flex;
    margin-top: auto;
}

.psp-group {
    display: flex;
    flex-direction: column;
    -webkit-box-align: center;
    align-items: center;
    margin: 0px 0.75rem;
}

.psp-icon {
    color: rgb(255, 255, 255);
    width: 3rem;
    height: 3rem;
    display: flex;
    -webkit-box-align: center;
    align-items: center;
    -webkit-box-pack: center;
    justify-content: center;
    padding: 2px;
    border-radius: 50%;
}

.psp-icon svg {
    width: 80%;
    height: 80%;
    fill: currentcolor;
}

.psp-icon.facebook {
    background: #3b5998;
}

.psp-icon.twitter {
    background: #55acee;
}

.psp-icon.email {
    background: rgb(136, 136, 136);
}

.psp-icon.email svg {
    width: 70%;
    height: 70%;
}

.pspi-text {
    margin-top: 4px;
}

/* @media screen and (max-width: 576px) {
    .product-container {
        flex-direction: column;
    }

    .product-image {
        margin-right: 0;
    }
} */

#reset-price-range {
    cursor: pointer;
}

